--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, IBistuGapActivity!</string>
-    <string name="app_name">iBistuGap</string>
+    <string name="app_name">iBistu</string>
+    <string name="hello">Hi</string>
 
 </resources>
